--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,7 @@
     <!-- <link rel="shortcut icon" href="images/www.png"> -->
 
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <!-- main -->
@@ -31,6 +32,25 @@
             </ul>
         </nav>
 
+        <!-- Description and Name -->
+        <div class="name">
+
+            <!-- hello -->
+            <p id="hello">
+                Hello
+            </p>
+
+            <!-- Name -->
+            <h1>I'm <font color="#17d1ac">Archit</font> Badjatya</h1>
+
+            <!-- Details -->
+            <p class="details">
+                I am a Front End Web Devloper who is on the way to become a Full Stack Web Devloper, UI/Ux Designer , Graphic Designer and a Photographer.
+            </p>
+
+            <!-- Cv Button -->
+            <a href="#" class="cv-btn">Download Cv</a>
+        </div>
         
 
     </section>
