--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archit Badjatya</title>
     <!-- <link rel="shortcut icon" href="images/www.png"> -->
-
     <link rel="stylesheet" href="css/style.css">
+    
+    <!-- Using FontAwesome -->
+    <script src="https://kit.fontawesome.com/3fa6ce8308.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
     <!-- main -->
     <section id="main">
-
+```
         <!-- Navigation -->
         <nav>
 
@@ -51,8 +53,45 @@
             <!-- Cv Button -->
             <a href="#" class="cv-btn">Download Cv</a>
         </div>
-        
+
+        <!-- Social -->
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+
+        <!-- Arrow -->
+        <div class="arrow"></div>
 
     </section>
+
+    <!-- About section  -->
+    <section id="about">
+
+        <!-- about text  -->
+        <div class="about-text">
+            <h1>About Us</h1>
+            <h2>Front End Devloper</h2>
+            <p>
+                I am Archit Badjatya a 20 year old Web Devloper.A B-Tech Computer Science in Artificial Intelligence student.
+                I am Graphic Designer and a Ui/Ux Designer. 
+            </p>
+            <!-- button more details -->
+            <button>More Details</button>
+        </div>
+
+        <!-- About model image -->
+        <div class="about-model">
+            <img id="archit" src="images/aj.png" alt="Archit Image">
+        </div>
+
+    </section>
+
+    <!-- Services  -->
+
+
 </body>
 </html>
