--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BADJATYA</title>
+
+    <!-- FONT AWESOME  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+
+    <!-- STYLE  -->
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/color-1.css">
 </head>
 <body>
     <!-- HEADER START  -->
@@ -74,5 +80,228 @@
         </div>
     </section>
     <!-- HOME SECTION ENDS  -->
+
+    <!-- ABOUT SECTION STARTS  -->
+    <section class="about-section section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2 data-heading="main info"="">About Me</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="about-img">
+                    <div class="img-box inner-shadow">
+                        <img src="./resources/img/profile-pic.png" class="outer-shadow" alt="profile-pic">
+                    </div>
+
+                    <!-- SOCIAL LINK STARTS  -->
+                    <div class="social-links">
+                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-github"></i></a>
+                    </div>
+                    <!-- SOCIAL LINK ENDS  -->
+
+                </div>
+
+                <div class="about-info">
+                    <p><span>Hi! My name is Archit Badjatya. I am a Web Developer </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto reiciendis corrupti quidem suscipit provident ut, sequi unde aliquid, ipsum commodi ipsa incidunt totam itaque doloribus enim necessitatibus aperiam atque nemo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi mollitia qui praesentium nemo tenetur dolore iure harum temporibus, aperiam eos, excepturi cumque ea assumenda rem, perferendis voluptate? Sunt, laborum facilis.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam porro maiores consequatur est fugit sequi sint placeat quisquam ad vero voluptate iste veritatis, totam nisi. Ipsam commodi non quos mollitia!</p>
+                    <a href="./resources/resume/ArchitBadjatya.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
+                    <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+                </div>
+            </div>
+
+            <!-- ABOUT TABS START  -->
+            <div class="row">
+                <div class="about-tabs">
+                    <span class="tab-item outer-shadow active" data-target=".skills">skills</span>
+                    <span class="tab-item" data-target=".experience">experience</span>
+                    <span class="tab-item" data-target=".education">education</span>
+                </div>
+            </div>
+            <!-- ABOUT TABS END  -->
+
+            <!-- SKILLS START  -->
+            <div class="row">
+                <div class="skills tab-content active">
+                    <div class="row">
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Html</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(50% - 14px);">
+                                    <span>50%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>JavaScript</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(60% - 14px);">
+                                    <span>60%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>BootStrap</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(70% - 14px);">
+                                    <span>70%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Jquery</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(80% - 14px);">
+                                    <span>80%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>React Js</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(90% - 14px);">
+                                    <span>90%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>CSS</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(100% - 14px);">
+                                    <span>100%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+                    </div>
+                </div>
+            </div>
+            <!-- SKILLS END  -->
+
+            <!-- EXPERIENCE STARTS  -->
+            <div class="row">
+                <div class="experience tab-content">
+                    <div class="row">
+                        <div class="timeline">
+                            <div class="row">
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-briefcase icon"></i>
+                                        <span>Sep, 2018 - Present</span>
+                                        <h3>Full Stack Developer</h3>
+                                        <h4>Company name, India</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM START  -->
+
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-briefcase icon"></i>
+                                        <span>Sep, 2018 - Oct, 2016</span>
+                                        <h3>Web Designer</h3>
+                                        <h4>Company name, India</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM START  -->
+
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-briefcase icon"></i>
+                                        <span>Sep, 2018 - Oct, 2016</span>
+                                        <h3>Full Stack Developer</h3>
+                                        <h4>Company name, India</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM START  -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- EXPERIENCE END  -->
+
+
+            <!-- EDUCATION START  -->
+            <div class="row">
+                <div class="education tab-content">
+                    <div class="row">
+                        <div class="timeline">
+                            <div class="row">
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-graduation-cap icon"></i>
+                                        <span>2012 - 2014</span>
+                                        <h3>Master in Computer Science</h3>
+                                        <!-- <h4>Company name, India</h4> -->
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM START  -->
+
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-graduation-cap icon"></i>
+                                        <span>2012 - 2014</span>
+                                        <h3>Master in Computer Science</h3>
+                                        <!-- <h4>Company name, India</h4> -->
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM START  -->
+
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-graduation-cap icon"></i>
+                                        <span>2012 - 2014</span>
+                                        <h3>Master in Computer Science</h3>
+                                        <!-- <h4>Company name, India</h4> -->
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM START  -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- EDUCATION END  -->
+        </div>
+    </section>
+    <!-- ABOUT SECTION ENDS  -->
+
+
+
+    <!-- MAIN JS -->
+    <script src="./resources/js/script.js"></script>
 </body>
 </html>
