--- a/index.html
+++ b/index.html
@@ -300,6 +300,99 @@
     <!-- ABOUT SECTION ENDS  -->
 
 
+    <!-- SERVICE SECTION STARTS  -->
+    <section class="service-section section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2 data-heading="Services">What i do</h2>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <!-- SERVICE ITEM STARTS  -->
+                <div class="service-item">
+                    <div class="service-item-inner outer-shadow">
+                        <div class="icon inner-shadow">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3>Responsive Design</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                    </div>
+                </div>
+                <!-- SERVICE ITEM END  -->
+
+                <!-- SERVICE ITEM STARTS  -->
+                <div class="service-item">
+                    <div class="service-item-inner outer-shadow">
+                        <div class="icon inner-shadow">
+                            <i class="fas fa-laptop-code"></i>
+                        </div>
+                        <h3>Web Design</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                    </div>
+                </div>
+                <!-- SERVICE ITEM END  -->
+
+                <!-- SERVICE ITEM STARTS  -->
+                <div class="service-item">
+                    <div class="service-item-inner outer-shadow">
+                        <div class="icon inner-shadow">
+                            <i class="fas fa-palette"></i>
+                        </div>
+                        <h3>Graphic Design</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                    </div>
+                </div>
+                <!-- SERVICE ITEM END  -->
+
+                <!-- SERVICE ITEM STARTS  -->
+                <div class="service-item">
+                    <div class="service-item-inner outer-shadow">
+                        <div class="icon inner-shadow">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h3>Clean Code</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                    </div>
+                </div>
+                <!-- SERVICE ITEM END  -->
+
+                <!-- SERVICE ITEM STARTS  -->
+                <div class="service-item">
+                    <div class="service-item-inner outer-shadow">
+                        <div class="icon inner-shadow">
+                            <i class="fas fa-search"></i>
+                        </div>
+                        <h3>SEO Marketing</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                    </div>
+                </div>
+                <!-- SERVICE ITEM END  -->
+
+                <!-- SERVICE ITEM STARTS  -->
+                <div class="service-item">
+                    <div class="service-item-inner outer-shadow">
+                        <div class="icon inner-shadow">
+                            <i class="fas fa-bullhorn"></i>
+                        </div>
+                        <h3>Great Support</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                    </div>
+                </div>
+                <!-- SERVICE ITEM END  -->
+            </div>
+        </div>
+    </section>
+    <!-- SERVICE SECTION ENDS  -->
+
+    <!-- PORTFOLIO SECTION STARTS  -->
+
+    <!-- PORTFOLIO SECTION ENDS  -->
+
+
+
 
     <!-- MAIN JS -->
     <script src="./resources/js/script.js"></script>
