--- a/index.html
+++ b/index.html
@@ -388,8 +388,191 @@
     <!-- SERVICE SECTION ENDS  -->
 
     <!-- PORTFOLIO SECTION STARTS  -->
+    <section class="portfolio-section section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2 data-heading="Portfolio">Latest Works</h2>
+                </div>
+            </div>
 
+            <!-- PORTFOLIO FILTER START  -->
+            <div class="row">
+                <div class="portfolio-filter">
+                    <span class="filter-item outer-shadow active" data-target="all">All</span>
+                    <span class="filter-item" data-target="website">Website</span>
+                    <span class="filter-item" data-target="react">React</span>
+                    <span class="filter-item" data-target="e-commerce">E Commerce</span>
+                </div>
+            </div>
+            <!-- PORTFOLIO FILTER ENDS  -->
+
+            <!-- PORTFOLIO ITEMS START  -->
+            <div class="row portfolio-items">
+
+                <!-- PORTFOLIO ITEM START  -->
+                <div class="portfolio-item" data-category="website">
+                    <div class="portfolio-item-inner outer-shadow">
+                        <div class="portfolio-item-img">
+                            <img src="./resources/img/portfolio/thumb/project-1.png" alt="portfolio" data-screenshot="./resources/img/portfolio/large/project-1/1.png,
+                            ./resources/img/portfolio/large/project-1/2.png,
+                            ./resources/img/portfolio/large/project-1/3.png,
+                            ./resources/img/portfolio/large/project-1/4.png,
+                            ./resources/img/portfolio/large/project-1/5.png,
+                            ./resources/img/portfolio/large/project-1/6.png">
+                            <!-- view project btn  -->
+                            <span class="view-project">View Project</span>
+                        </div>
+                        <p class="portfolio-item-title">personal portfolio</p>
+                        <!-- portfolio item details start  -->
+                        <div class="portfolio-item-details">
+                            <div class="row">
+                                <div class="description">
+                                    <h3>Project Brief:</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quibusdam minima laborum, aut illo officia maxime aliquam dolor repudiandae, omnis error, numquam dolore doloremque repellendus laboriosam. Ad esse vero suscipit!</p>
+                                </div>
+                                <div class="info">
+                                    <h3>Project Info:</h3>
+                                    <ul>
+                                        <li>Date - <span>2020</span></li>
+                                        <li>Client - <span>xyz</span></li>
+                                        <li>Tools - <span>Html,Css,JavaScript</span></li>
+                                        <li>Web - <span><a href="#">www.domain.com</a></span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item details end  -->
+                    </div>
+                </div>
+                <!-- PORTFOLIO ITEM END  -->
+
+                <!-- PORTFOLIO ITEM START  -->
+                <div class="portfolio-item" data-category="website">
+                    <div class="portfolio-item-inner outer-shadow">
+                        <div class="portfolio-item-img">
+                            <img src="./resources/img/portfolio/thumb/project-2.png" alt="portfolio" data-screenshot="./resources/img/portfolio/large/project-2/1.png,
+                            ./resources/img/portfolio/large/project-2/2.png">
+                            <!-- view project btn  -->
+                            <span class="view-project">View Project</span>
+                        </div>
+                        <p class="portfolio-item-title">wedding couple</p>
+                        <!-- portfolio item details start  -->
+                        <div class="portfolio-item-details">
+                            <div class="row">
+                                <div class="description">
+                                    <h3>Project Brief:</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quibusdam minima laborum, aut illo officia maxime aliquam dolor repudiandae, omnis error, numquam dolore doloremque repellendus laboriosam. Ad esse vero suscipit!</p>
+                                </div>
+                                <div class="info">
+                                    <h3>Project Info:</h3>
+                                    <ul>
+                                        <li>Date - <span>2020</span></li>
+                                        <li>Client - <span>xyz</span></li>
+                                        <li>Tools - <span>Html,Css,JavaScript,Jquery</span></li>
+                                        <li>Web - <span><a href="#">www.domain.com</a></span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item details end  -->
+                    </div>
+                </div>
+                <!-- PORTFOLIO ITEM END  -->
+
+                <!-- PORTFOLIO ITEM START  -->
+                <div class="portfolio-item" data-category="react">
+                    <div class="portfolio-item-inner outer-shadow">
+                        <div class="portfolio-item-img">
+                            <img src="./resources/img/portfolio/thumb/project-3.png" alt="portfolio" data-screenshot="./resources/img/portfolio/large/project-3/1.png,
+                            ./resources/img/portfolio/large/project-3/2.png,
+                            ./resources/img/portfolio/large/project-3/3.png,
+                            ./resources/img/portfolio/large/project-3/4.png,
+                            ./resources/img/portfolio/large/project-3/5.png">
+                            <!-- view project btn  -->
+                            <span class="view-project">View Project</span>
+                        </div>
+                        <p class="portfolio-item-title">product landing page</p>
+                        <!-- portfolio item details start  -->
+                        <div class="portfolio-item-details">
+                            <div class="row">
+                                <div class="description">
+                                    <h3>Project Brief:</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quibusdam minima laborum, aut illo officia maxime aliquam dolor repudiandae, omnis error, numquam dolore doloremque repellendus laboriosam. Ad esse vero suscipit!</p>
+                                </div>
+                                <div class="info">
+                                    <h3>Project Info:</h3>
+                                    <ul>
+                                        <li>Date - <span>2020</span></li>
+                                        <li>Client - <span>xyz</span></li>
+                                        <li>Tools - <span>Html,Css,JavaScript</span></li>
+                                        <li>Web - <span><a href="#">www.domain.com</a></span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item details end  -->
+                    </div>
+                </div>
+                <!-- PORTFOLIO ITEM END  -->
+
+            </div>
+            <!-- PORTFOLIO ITEMS ENDS  -->
+
+        </div>
+    </section>
     <!-- PORTFOLIO SECTION ENDS  -->
+
+    <!-- PORTFOLIO POPUP START  -->
+    <div class="pp portfolio-popup">
+        <div class="pp-details">
+            <div class="pp-details-inner">
+                <div class="pp-title">
+                    <h2>personal portfolio</h2>
+                    <p>Category - <span class="pp-project-category">Website</span></p>
+                </div>
+                <div class="pp-project-details">
+                    <div class="row">
+                        <div class="description">
+                            <h3>Project Brief:</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quibusdam minima laborum, aut illo officia maxime aliquam dolor repudiandae, omnis error, numquam dolore doloremque repellendus laboriosam. Ad esse vero suscipit!</p>
+                        </div>
+                        <div class="info">
+                            <h3>Project Info:</h3>
+                            <ul>
+                                <li>Date - <span>2020</span></li>
+                                <li>Client - <span>xyz</span></li>
+                                <li>Tools - <span>Html,Css,JavaScript</span></li>
+                                <li>Web - <span><a href="#">www.domain.com</a></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="separator"></div>
+
+        <div class="pp-main">
+            <div class="pp-main-inner">
+                <div class="pp-project-details-btn outer-shadow hover-in-shadow">
+                    Project Details <i class="fas fa-plus"></i>
+                </div>
+                <div class="pp-close outer-shadow hover-in-shadow">&times;</div>
+                <img src="./resources/img/portfolio/large/project-1/1.png" alt="" class="pp-img outer-shadow">
+                <div class="pp-counter">1 of 6</div>
+            </div>
+
+            <div class="pp-loader">
+                <div></div>
+            </div>
+
+            <!-- pp NAVIGATION  -->
+            <div class="pp-prev"><i class="fas fa-play"></i></div>
+            <div class="pp-next"><i class="fas fa-play"></i></div>
+        </div>
+    </div>
+    <!-- PORTFOLIO POPUP ENDS  -->
 
 
 
