--- a/index.html
+++ b/index.html
@@ -523,6 +523,64 @@
     </section>
     <!-- PORTFOLIO SECTION ENDS  -->
 
+
+    <!-- TESTIMONIAL SECTION STARTS  -->
+    <section class="testimonial-section section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2 data-heading="testimonial">Client Speak</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="testi-box">
+                    <div class="testi-slider outer-shadow">
+                        <div class="testi-slider-container">
+
+                            <!-- testi item start  -->
+                            <div class="testi-item active">
+                                <i class="fas fa-quote-left left"></i>
+                                <i class="fas fa-quote-right right"></i>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, officiis? Lorem ipsum dolor sit amet.</p>
+                                <img src="./resources/img/testimonial/1.png" alt="Testimonial">
+                                <span>Archit Badjatya</span>
+                            </div>
+                            <!-- testi item end  -->
+
+                            <!-- testi item start  -->
+                            <div class="testi-item">
+                                <i class="fas fa-quote-left left"></i>
+                                <i class="fas fa-quote-right right"></i>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, officiis? Lorem ipsum dolor sit amet.</p>
+                                <img src="./resources/img/testimonial/1.png" alt="Testimonial">
+                                <span>anand Badjatya</span>
+                            </div>
+                            <!-- testi item end  -->
+
+                            <!-- testi item start  -->
+                            <div class="testi-item">
+                                <i class="fas fa-quote-left left"></i>
+                                <i class="fas fa-quote-right right"></i>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, officiis? Lorem ipsum dolor sit amet.</p>
+                                <img src="./resources/img/testimonial/1.png" alt="Testimonial">
+                                <span>Archi Badjatya</span>
+                            </div>
+                            <!-- testi item end  -->
+
+                        </div>
+                    </div>
+                    <div class="testi-slider-nav">
+                        <span class="prev outer-shadow hover-in-shadow"><i class="fas fa-angle-left"></i></span>
+                        <span class="next outer-shadow hover-in-shadow"><i class="fas fa-angle-right"></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- TESTIMONIAL SECTION ENDS  -->
+
+
     <!-- PORTFOLIO POPUP START  -->
     <div class="pp portfolio-popup">
         <div class="pp-details">
