--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="close-nav-menu outer-shadow hover-in-shadow">&times;</div>
         <div class="nav-menu-inner">
             <ul>
-                <li><a href="#" class="inner-shadow active">HOME</a></li>
-                <li><a href="#" class="outer-shadow hover-in-shadow">ABOUT</a></li>
-                <li><a href="#" class="outer-shadow hover-in-shadow">SERVICES</a></li>
-                <li><a href="#" class="outer-shadow hover-in-shadow">PORTFOLIO</a></li>
-                <li><a href="#" class="outer-shadow hover-in-shadow">TESTIMONIALS</a></li>
-                <li><a href="#" class="outer-shadow hover-in-shadow">CONTACT</a></li>
+                <li><a href="#home" class="link-item inner-shadow active">HOME</a></li>
+                <li><a href="#about" class="link-item outer-shadow hover-in-shadow">ABOUT</a></li>
+                <li><a href="#services" class="link-item outer-shadow hover-in-shadow">SERVICES</a></li>
+                <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">PORTFOLIO</a></li>
+                <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">TESTIMONIALS</a></li>
+                <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">CONTACT</a></li>
             </ul>
         </div>
         <p class="copyright-text">&copy; 2021 BADJATYA</p>
@@ -47,7 +47,7 @@
     <!-- NAVIGATION END  -->
 
     <!-- HOME SECTION STARTS  -->
-    <section class="home-section section">
+    <section class="home-section section" id="home">
 
         <!-- EFFECT WRAP START  -->
         <div class="effect-wrap">
@@ -69,7 +69,7 @@
                     <p>Hello</p>
                     <h2>I'm Archit Badjatya</h2>
                     <h1>Frontend Web Developer</h1>
-                    <a href="#" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
+                    <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
                 </div>
                 <div class="home-img">
                     <div class="img-box inner-shadow">
@@ -82,7 +82,7 @@
     <!-- HOME SECTION ENDS  -->
 
     <!-- ABOUT SECTION STARTS  -->
-    <section class="about-section section">
+    <section class="about-section section" id="about">
         <div class="container">
             <div class="row">
                 <div class="section-title">
@@ -111,7 +111,7 @@
                     <p><span>Hi! My name is Archit Badjatya. I am a Web Developer </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto reiciendis corrupti quidem suscipit provident ut, sequi unde aliquid, ipsum commodi ipsa incidunt totam itaque doloribus enim necessitatibus aperiam atque nemo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi mollitia qui praesentium nemo tenetur dolore iure harum temporibus, aperiam eos, excepturi cumque ea assumenda rem, perferendis voluptate? Sunt, laborum facilis.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam porro maiores consequatur est fugit sequi sint placeat quisquam ad vero voluptate iste veritatis, totam nisi. Ipsam commodi non quos mollitia!</p>
                     <a href="./resources/resume/ArchitBadjatya.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
-                    <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+                    <a href="#" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
                 </div>
             </div>
 
@@ -301,7 +301,7 @@
 
 
     <!-- SERVICE SECTION STARTS  -->
-    <section class="service-section section">
+    <section class="service-section section" id="services">
         <div class="container">
             <div class="row">
                 <div class="section-title">
@@ -388,7 +388,7 @@
     <!-- SERVICE SECTION ENDS  -->
 
     <!-- PORTFOLIO SECTION STARTS  -->
-    <section class="portfolio-section section">
+    <section class="portfolio-section section" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="section-title">
@@ -525,7 +525,7 @@
 
 
     <!-- TESTIMONIAL SECTION STARTS  -->
-    <section class="testimonial-section section">
+    <section class="testimonial-section section" id="testimonial">
         <div class="container">
             <div class="row">
                 <div class="section-title">
@@ -579,6 +579,84 @@
         </div>
     </section>
     <!-- TESTIMONIAL SECTION ENDS  -->
+
+
+    <!-- CONTACT SECTION STARTS  -->
+    <section class="contact-section section" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2 data-heading="contact">Get in touch</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- contact item start  -->
+                <div class="contact-item">
+                    <div class="contact-item-inner outer-shadow">
+                        <i class="fas fa-phone"></i>
+                        <span>Phone</span>
+                        <p>000 123 7777</p>
+                    </div>
+                </div>
+                <!-- contact item end  -->
+
+                <!-- contact item start  -->
+                <div class="contact-item">
+                    <div class="contact-item-inner outer-shadow">
+                        <i class="fas fa-envelope"></i>
+                        <span>Email</span>
+                        <p>architj240@gmail.com</p>
+                    </div>
+                </div>
+                <!-- contact item end  -->
+
+                <!-- contact item start  -->
+                <div class="contact-item">
+                    <div class="contact-item-inner outer-shadow">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Address</span>
+                        <p>Jain complex, Manawar- 454446</p>
+                    </div>
+                </div>
+                <!-- contact item end  -->
+            </div>
+
+            <div class="row">
+                <div class="contact-form">
+                    <form action="">
+                        <div class="row">
+                            <div class="w-50">
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <input type="text" name="name" id="name" class="input-control" placeholder="Name">
+                                </div>
+
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <input type="email" name="email" id="email" class="input-control" placeholder="Email">
+                                </div>
+
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <input type="text" name="subject" id="subject" class="input-control" placeholder="Subject">
+                                </div>
+                            </div>
+                            <div class="w-50">
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <textarea placeholder="Message" name="message" id="message" class="input-control"></textarea>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="submit-btn">
+                                <button type="submit" class="btn-1 outer-shadow hover-in-shadow">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- CONTACT SECTION ENDS  -->
 
 
     <!-- PORTFOLIO POPUP START  -->
